# connective

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_document_deduplication.py  003_chat_and_overlap_alerts.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  chat.py  connectors.py  deps.py  ingest.py  notifications.py  scan.py
backend/app/connectors/: __init__.py  base.py  github.py  google_drive.py  slack.py
backend/app/models/: __init__.py  chat_message.py  chunk.py  connector.py  document.py  document_access.py  oauth_token.py  overlap_alert.py  user.py
backend/app/pipeline/: chunker.py  embedder.py  indexer.py  overlap_detector.py  retriever.py
backend/app/prompts/: overlap_confirm.py  rag_answer.py  scan_overlap.py
backend/app/schemas/: auth.py  chat.py  connector.py  notifications.py  scan.py
backend/app/services/: encryption.py  openai_client.py
frontend/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/auth/: user-menu.tsx
frontend/components/chat/: chat-input.tsx  chat-message-list.tsx  chat-message.tsx  citation-chip.tsx  scan-button.tsx
frontend/components/ui/: badge.tsx  (+2 more)
frontend/lib/: api-client.ts  types.ts
frontend/providers/: auth-provider.tsx
(+22 files in other folders)
