[project]
name = "connective-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.4.1",
    "openai>=1.86.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "tiktoken>=0.9.0",
    "pymupdf>=1.26.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py313"
